--- a/todoapp/src/components/todoItem.css
+++ b/todoapp/src/components/todoItem.css
@@ -5,3 +5,13 @@
 .completed {
   text-decoration: line-through;
 }
+
+.card {
+  background-color: blue;
+}
+
+.color-selector {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
