--- a/src/components/todoItem.css
+++ b/src/components/todoItem.css
@@ -13,3 +13,30 @@
   margin-bottom: 5px;
   margin-right: 10px;
 }
+
+.palette-icon {
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-bottom: 7px;
+  margin-right: 10px;
+}
+
+.delete-icon {
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-bottom: 7px;
+  margin-right: 30px;
+}
+
+.complete-icon {
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-bottom: 7px;
+  margin-right: 50px;
+}
