--- a/src/login.css
+++ b/src/login.css
@@ -2,6 +2,7 @@ h1 {
   color: white;
   margin: 0 0 25px 0;
   text-align: center;
+  padding-top: 50px;
 }
 .text {
   color: white;
@@ -15,8 +16,10 @@ h1 {
 .logo {
   display: block;
   margin: auto;
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
+  padding: 25px;
+  cursor: pointer;
 }
 
 button {
