--- a/src/components/todoItem.css
+++ b/src/components/todoItem.css
@@ -73,6 +73,17 @@
   margin-right: 30px;
 }
 
+.delete-date-icon {
+  width: 15px;
+  height: 15px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin-bottom: 4px;
+  margin-left: 60px;
+}
+
 .complete-icon {
   cursor: pointer;
   position: absolute;
@@ -92,6 +103,7 @@
 }
 
 .todo-date {
+  color: #eeeeee;
   font-weight: bold;
   font-size: 12px;
   position: absolute;
