--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,4 +1,6 @@
 .title {
+  font-size: 3em;
+  font-weight: 3em;
   color: white;
   padding-bottom: 35px;
 }
@@ -9,6 +11,7 @@
   top: 20px;
   right: 70px;
   cursor: pointer;
+  text-shadow: 2px 2px 40px #000000;
 }
 
 .propic {
@@ -18,4 +21,5 @@
   width: 45px;
   height: 45px;
   border-radius: 50%;
+  box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
 }
