Re-did date picker

--- a/src/components/todoItem.css
+++ b/src/components/todoItem.css
@@ -127,3 +127,11 @@
 .expired {
   opacity: 0.5;
 }
+.date-style {
+  height: 400px;
+}
+.submit-date {
+  position: absolute;
+  bottom: 100px;
+  right: 25px;
+}
